--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 
 <head>
     <meta charset=utf-8/>
+    <title>ic-04</title>
 </head>
 
 
 <body>
-
-
+    <h1>Intro to HTML and CSS</h1>
+    <h2>Kai Goerg</h2>
+    <div class="container">
+        <p id="p1" class="italic">My favorite visualization is not sure</p>
+    </div>
+    <div id="div2" class="container">
+        <svg viewBox="0 0 220 100" xmlns="http://www.w3.org/2000/svg">
+            <!-- Simple rectangle -->
+            <rect width="100" height="100" fill="blue"/>
+        </svg>
+    </div>
 </body>
 
 </html>
